--- a/.github/workflows/Build-X64.yml
+++ b/.github/workflows/Build-X64.yml
@@ -36,29 +36,21 @@ jobs:
         ref: ${{ env.SOURCE_BRANCH }}
         path: 'openwrt'
 
-    - name: Action Cache
-      id: action-chche
+    - name: Download last action cache
+      id: load-chche
       uses: actions/cache@v3
       with:
-        path: ./openwrt/action_cache.tar
-        key: openwrt-x64-${{ hashFiles('configs/X64_config.txt') }}
-
-    #- name: Action Cache
-    #  id: action-chche
-    #  uses: actions/cache@v3
-    #  with:
-    #    path: ./openwrt/action_cache_${{ hashFiles('.github/X64_action_cache') }}.tar
-    #    key: openwrt-x64-${{ hashFiles('./.github/X64_action_cache') }}
+        path: ./openwrt/action_cache_${{ hashFiles('./.github/X64_action_cache') }}.tar
+        key: openwrt-x64-${{ hashFiles('./.github/X64_action_cache') }}
 
     - name: Restore cache files
-      if: steps.action-chche.outputs.cache-hit == 'true'
+      if: steps.load-chche.outputs.cache-hit == 'true'
       working-directory: ./openwrt
       run: |
-        tar -xjf action_cache.tar
-        #tar -xf action_cache_*.tar
+        tar -xf action_cache_*.tar
         mv ./action_cache/build_dir/ ./action_cache/dl/ ./action_cache/staging_dir/ -t ./
         rm -f ./action_cache.tar && rm -rf ./action_cache/
-        echo "$(ls -lh)"
+        echo "$(ls -lha)"
 
     - name: Update & Install feeds
       working-directory: ./openwrt
@@ -103,32 +95,32 @@ jobs:
         git commit -m "Update config files"
         git push origin main
 
-    #- name: Build firmware
-    #  working-directory: ./openwrt
-    #  run: |
-    #    echo -e "Using $(($(nproc)+1)) threads to compile."
-    #    make -j $(($(nproc)+1)) download world
+    - name: Build firmware
+      working-directory: ./openwrt
+      run: |
+        echo -e "Using $(($(nproc)+1)) threads to compile."
+        make -j $(($(nproc)+1)) download world
 
-    #- name : Upload ext4-efi.img to artifact
-    #  uses: actions/upload-artifact@v3
-    #  with:
-    #    name: ext4-combined
-    #    path: openwrt/bin/targets/x86/64/*-ext4-combined-efi.img.gz
-    #    retention-days: 3
+    - name : Upload ext4-efi.img to artifact
+      uses: actions/upload-artifact@v3
+      with:
+        name: ext4-combined
+        path: openwrt/bin/targets/x86/64/*-ext4-combined-efi.img.gz
+        retention-days: 3
 
-    #- name : Upload squashfs-efi.img to artifact
-    #  uses: actions/upload-artifact@v3
-    #  with:
-    #    name: squashfs-combined
-    #    path: openwrt/bin/targets/x86/64/*-squashfs-combined-efi.img.gz
-    #    retention-days: 3
+    - name : Upload squashfs-efi.img to artifact
+      uses: actions/upload-artifact@v3
+      with:
+        name: squashfs-combined
+        path: openwrt/bin/targets/x86/64/*-squashfs-combined-efi.img.gz
+        retention-days: 3
 
-    #- name : Upload all to artifact
-    #  uses: actions/upload-artifact@v3
-    #  with:
-    #    name: X64_openwrt
-    #    path: openwrt/bin/targets/x86/64
-    #    retention-days: 3
+    - name : Upload all to artifact
+      uses: actions/upload-artifact@v3
+      with:
+        name: X64_openwrt
+        path: openwrt/bin/targets/x86/64
+        retention-days: 3
 
     - name: Create cache file
       working-directory: ./openwrt
@@ -138,6 +130,7 @@ jobs:
         mv ./build_dir/ ./dl/ ./staging_dir/ -t ./action_cache
         tar -cf ./action_cache.tar ./action_cache
         rm -rf ./action_cache
+        echo "The size of action_cache.tar: $(du -h action_cache.tar)"
 
     - name: Commit cache mark
       run: |
@@ -154,7 +147,7 @@ jobs:
       run: |
         mv ./openwrt/action_cache.tar ./openwrt/action_cache_${{ hashFiles('./.github/X64_action_cache') }}.tar
 
-    - name: Renew action Cache
+    - name: Upload new action cache
       uses: actions/cache@v3
       with:
         path: ./openwrt/action_cache_${{ hashFiles('./.github/X64_action_cache') }}.tar
