--- a/.github/workflows/Build-RM2100.yml
+++ b/.github/workflows/Build-RM2100.yml
@@ -35,21 +35,21 @@ jobs:
         ref: ${{ env.SOURCE_BRANCH }}
         path: 'openwrt'
 
-    - name: Download last build cache
-      uses: robinraju/release-downloader@v1.4
-      with:
-        repository: ${{ github.repository }}
-        tag: "latest-rm2100"
-        fileName: "zzz_cache.tar.zst_part_*"
+    #- name: Download last build cache
+    #  uses: robinraju/release-downloader@v1.4
+    #  with:
+    #    repository: ${{ github.repository }}
+    #    tag: "latest-rm2100"
+    #    fileName: "zzz_cache.tar.zst_part_*"
 
-    - name: Restore cache files
-      run: |
-        cat zzz_cache.tar.zst_part_* > zzz_cache.tar.zst
-        rm -f zzz_cache.tar.zst_part_*
-        tar --zstd -xf zzz_cache.tar.zst
-        mv ./cache_path/build_dir/ ./cache_path/dl/ ./cache_path/staging_dir/ -t ./openwrt/
-        rm -f ./zzz_cache.tar.zst && rm -rf ./cache_path
-        echo "Files under openwrt directory: $(ls -lha ./openwrt)"
+    #- name: Restore cache files
+    #  run: |
+    #    cat zzz_cache.tar.zst_part_* > zzz_cache.tar.zst
+    #    rm -f zzz_cache.tar.zst_part_*
+    #    tar --zstd -xf zzz_cache.tar.zst
+    #    mv ./cache_path/build_dir/ ./cache_path/dl/ ./cache_path/staging_dir/ -t ./openwrt/
+    #    rm -f ./zzz_cache.tar.zst && rm -rf ./cache_path
+    #    echo "Files under openwrt directory: $(ls -lha ./openwrt)"
 
     - name: Update & Install feeds
       working-directory: ./openwrt
@@ -98,7 +98,7 @@ jobs:
 
     - name: Prepare for release
       run: |
-        echo "FIRMWARE_DATE=Firmware built at: $(date -d "8 hour" -u +"%Y-%m-%d %H:%M")" >> $GITHUB_ENV
+        echo "RELEASE_BODY=Firmware built at: $(date -d "8 hour" -u +"%Y-%m-%d %H:%M")" >> $GITHUB_ENV
         mkdir release_path cache_path
         cd ./openwrt
         rm -rf ./bin/targets/ramips/mt7621/packages/
@@ -126,5 +126,5 @@ jobs:
         name: latest rm2100 firmware
         tag: latest-rm2100
         artifacts: release_path/*
-        body: ${{ env.FIRMWARE_DATE }}
+        body: ${{ env.RELEASE_BODY }}
 
