--- a/.github/workflows/Build-X64.yml
+++ b/.github/workflows/Build-X64.yml
@@ -35,21 +35,21 @@ jobs:
         ref: ${{ env.SOURCE_BRANCH }}
         path: 'openwrt'
 
-    - name: Download last build cache
-      uses: robinraju/release-downloader@v1.4
-      with:
-        repository: ${{ github.repository }}
-        tag: "latest-x64"
-        fileName: "zzz_cache.tar.zst_part_*"
+    #- name: Download last build cache
+    #  uses: robinraju/release-downloader@v1.4
+    #  with:
+    #    repository: ${{ github.repository }}
+    #    tag: "latest-x64"
+    #    fileName: "zzz_cache.tar.zst_part_*"
 
-    - name: Restore cache files
-      run: |
-        cat zzz_cache.tar.zst_part_* > zzz_cache.tar.zst
-        rm -f zzz_cache.tar.zst_part_*
-        tar --zstd -xf zzz_cache.tar.zst
-        mv ./cache_path/build_dir/ ./cache_path/dl/ ./cache_path/staging_dir/ -t ./openwrt/
-        rm -f ./zzz_cache.tar.zst && rm -rf ./cache_path
-        echo "Files under openwrt directory: $(ls -lha ./openwrt)"
+    #- name: Restore cache files
+    #  run: |
+    #    cat zzz_cache.tar.zst_part_* > zzz_cache.tar.zst
+    #    rm -f zzz_cache.tar.zst_part_*
+    #    tar --zstd -xf zzz_cache.tar.zst
+    #    mv ./cache_path/build_dir/ ./cache_path/dl/ ./cache_path/staging_dir/ -t ./openwrt/
+    #    rm -f ./zzz_cache.tar.zst && rm -rf ./cache_path
+    #    echo "Files under openwrt directory: $(ls -lha ./openwrt)"
 
     - name: Update & Install feeds
       working-directory: ./openwrt
@@ -102,7 +102,7 @@ jobs:
 
     - name: Prepare for release
       run: |
-        echo "FIRMWARE_DATE=Firmware built at: $(date -d "8 hour" -u +"%Y-%m-%d %H:%M")" >> $GITHUB_ENV
+        echo "RELEASE_BODY=Firmware built at: $(date -d "8 hour" -u +"%Y-%m-%d %H:%M")" >> $GITHUB_ENV
         mkdir release_path cache_path
         cd ./openwrt
         rm -rf ./bin/targets/x86/64/packages/
@@ -130,5 +130,5 @@ jobs:
         name: latest x64 firmware
         tag: latest-x64
         artifacts: release_path/*
-        body: ${{ env.FIRMWARE_DATE }}
+        body: ${{ env.RELEASE_BODY }}
 
